--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:postgres@postgres:5432/athens_monitor}
+      POLL_SOURCES: ${POLL_SOURCES:-gdelt,meteo}
 
 volumes:
   postgres_data:
