feat: OpenWeatherMap + USGS providers, mac-style status bar, relaxed filter

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://postgres:postgres@postgres:5432/athens_monitor
 APP_PORT=3000
-POLL_SOURCES=gdelt,meteo
+POLL_SOURCES=gdelt,meteo,usgs
+OPENWEATHER_API_KEY=your_openweather_key_here
